--- a/services/server/Dockerfile
+++ b/services/server/Dockerfile
@@ -3,5 +3,6 @@ COPY requirements.txt /tmp
 ADD server.py /
 RUN pip install -r /tmp/requirements.txt
 EXPOSE 5000
+EXPOSE 8888
 CMD ["python3", "server.py"]
 
